--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Grilli - Amazing & Delicious Food</title>
-  <meta name="title" content="Grilli - Amazing & Delicious Food">
+  <title>DineWithShine - Amazing & Delicious Food</title>
+  <meta name="title" content="DineWithShine - Amazing & Delicious Food">
   <meta name="description" content="This is a Restaurant html template made by Siddharth">
 
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./assets/images/dinewithshine.png" type="images">
 
   <!-- 
     - google font link
@@ -47,7 +47,7 @@
 
   <div class="preload" data-preaload>
     <div class="circle"></div>
-    <p class="text">Grilli</p>
+    <p class="text">DineWithShine</p>
   </div>
 
 
@@ -114,7 +114,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/dinewithshine.png" width="100" height="10" alt="Grilli - Home">
+        <img src="./assets/images/dinewithshine.png" width="100" height="10" alt="DineWithShine - Home">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -124,7 +124,7 @@
         </button>
 
         <a href="#" class="logo">
-          <img src="./assets/images/dinewithshine.png" width="160" height="50" alt="Grilli - Home">
+          <img src="./assets/images/dinewithshine.png" width="160" height="50" alt="DineWithShine - Home">
         </a>
 
         <ul class="navbar-list">
@@ -181,7 +181,7 @@
 
           <p class="body-4 navbar-text">Open: 9.30 am - 2.30pm</p>
 
-          <a href="mailto:booking@grilli.com" class="body-4 sidebar-link">booking@grilli.com</a>
+          <a href="mailto:booking@dws.com" class="body-4 sidebar-link">booking@dws.com</a>
 
           <div class="separator"></div>
 
@@ -1087,14 +1087,14 @@
         <div class="footer-brand has-before has-after">
 
           <a href="#" class="logo">
-            <img src="./assets/images/dinewithshine.png" width="160" height="50" loading="lazy" alt="grilli home">
+            <img src="./assets/images/dinewithshine.png" width="160" height="50" loading="lazy" alt="DineWithShine home">
           </a>
 
           <address class="body-4">
             Restaurant St, Delicious City, London 9578, UK
           </address>
 
-          <a href="mailto:booking@grilli.com" class="body-4 contact-link">booking@grilli.com</a>
+          <a href="mailto:booking@dws.com" class="body-4 contact-link">booking@dws.com</a>
 
           <a href="tel:+88123123456" class="body-4 contact-link">Booking Request : +88-123-123456</a>
 
@@ -1183,7 +1183,7 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2022 Grilli. All Rights Reserved | Crafted by <a href="https://github.com/siddharthgumber07"
+          &copy; 2022 DineWithShine. All Rights Reserved | Crafted by <a href="https://github.com/siddharthgumber07"
             target="_blank" class="link">Siddharth</a>
         </p>
 
